--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ button {
     padding: 10px 20px;
     margin: 0 10px;
     border: none;
-    background-color: #40E0D0;
+    background-color: #202583;
     color: white;
     cursor: pointer;
 }
