--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ button
 { padding: 10px 20px;
  margin: 0 10px; 
  border: none; 
- background-color: #333;
+ background-color:#260a7a;
  color: white; 
  cursor: pointer;
  border-radius:
