--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,21 @@ button:hover {
     header h1 {
         font-size: 1.2rem;
     }
+    @media (max-width: 768px) {
+    .blueprints {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .blueprint {
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    .action-button {
+        font-size: 12px
+
 
     button {
         font-size: 0.9rem;
